implementou excluir e moduçarização ,

--- a/index.html
+++ b/index.html
@@ -20,6 +20,22 @@
     categorias
 </button>
 
+<button data-action="menu" data-content="addCategory" class="btn btn-outline-dark">
+    Nova Categoria
+</button>
+
+<div class = "dropdown d-inline">
+<button data-bs-toggle="dropdown" class=" dropdown-toggle btn btn-outline-dark">
+    Filiais 
+</button>
+<ul class="dropdown-menu">
+    <li data-action="menu" data-content="branches" class="dropdown-item">Filial</li>
+    <li data-action="menu" data-content="addBranch" class="dropdown-item">Nova Filial</li>
+
+</ul>
+</div>
+
+
 <button data-action="menu" data-content="login" class="btn btn-outline-danger">
     sair 
 </button>
@@ -33,12 +49,15 @@
 
 
 
-<!-- JavaScript Bundle with Popper -->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-    <script src="js/pages/pagina01.js"></script>
-    <script src="js/pages/categories.js"></script>
-    <script src="js/pages/login.js"></script>
-    <script src="js/main.js"></script>
+    <!-- <script src="js/pages/pagina01.js"></script>
+         <script src="js/pages/categories.js"></script>
+         <script src="js/pages/login.js"></script>
+         <script src="js/pages/branches.js"></script>
+         <script src="js/pages/addBranch.js"></script> -->
+    <script src="js/util.js"></script>
+    <script src="js/main.js" type="module"></script>
 
 </body>
 
